--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             align-items: center;
             width: 100vw;
             height: 100vh;
-            font-family: 'Montserrat';
+            font-family: sans-serif;
             background-color: black;
         }
     </style>
