pointer added to all the buttons

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
             background-size: cover;
             background-repeat: no-repeat;
         }
+        button:hover{
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
