--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,11 @@
         button:hover{
             cursor: pointer;
         }
+        .pacmanRight{
+            width: 100%;
+            height: 100%;
+            background-image: url("../src/assets/gifs/pacman.gif");
+        }
     </style>
 </head>
 <body>
