The new gifs were added. These change according to the direction of the pacman

--- a/public/index.html
+++ b/public/index.html
@@ -32,10 +32,21 @@
         button:hover{
             cursor: pointer;
         }
-        .pacmanRight{
+        .pacmanDown, .pacmanLeft, .pacmanRight, .pacmanUp{
             width: 85%;
             height: 85%;
+        }
+        .pacmanRight{
             background-image: url("../src/assets/gifs/pacman.gif");
+        }
+        .pacmanLeft{
+            background-image: url("../src/assets/gifs/pacman_left.gif");
+        }
+        .pacmanDown{
+            background-image: url("../src/assets/gifs/pacman_down.gif");
+        }
+        .pacmanUp{
+            background-image: url("../src/assets/gifs/pacman_up.gif");
         }
     </style>
 </head>
