--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         button:hover{
             cursor: pointer;
         }
-        .pacman{
+        .pacman, .ghost{
             width: 85%;
             height: 85%;
         }
@@ -50,6 +50,9 @@
         }
         .pacmanUp{
             background-image: url("../src/assets/gifs/pacman_up.gif");
+        }
+        .redGhost{
+            background-image: url("../src/assets/images/ghost.png");
         }
     </style>
 </head>
