The 'food' already appears in the boardGame. Now there need to be actions for the pacman to win when all the food had been eaten

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,12 @@
         .pinkGhost{
             background-image: url("./assets/images/ghost_pink.png");
         }
+        .desktopFood{
+            background-image: url("./assets/images/desktopFood.png");
+        }
+        .mobileFood{
+            background-image: url("./assets/images/mobileFood.png");
+        }
     </style>
 </head>
 <body>
