The 'volume' icon was added to the boardgame in every layout. Left to do is give it interaction to the volume button and test the game to make it fun

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
             font-family: sans-serif;
             background-color: black;
         }
-        div, article{
+        div, article, .sound-status{
             background-position: center;
             background-size: cover;
             background-repeat: no-repeat;
@@ -67,6 +67,12 @@
         }
         .mobileFood{
             background-image: url("./assets/images/mobileFood.png");
+        }
+        .soundOn{
+            background-image: url("./assets/images/volume.svg");
+        }
+        .soundOff{
+            background-image: url("./assets/images/mute.svg");
         }
     </style>
 </head>
